# Documentation-Assistant

./: ingestion.py  pyproject.toml
backend/: chat_history.db  core.py
frontend/src/: App.jsx
frontend/src/components/: ChatBubble.jsx  ChatInput.jsx  ChatWindow.jsx  SideBar.jsx
frontend/src/style/: App.css  ChatBubble.css  ChatInput.css  ChatWindow.css  SideBar.css
